--- a/src/resource/locales/en/en.json
+++ b/src/resource/locales/en/en.json
@@ -2,6 +2,9 @@
   "origins": {
     "Origin": "Origin",
     "unknown": "unknown",
+    "Planet Squanch": "Planet Squanch",
+    "Immortality Field Resort": "Immortality Field Resort",
+    "Worldender's lair": "Worldender's lair",
     "Earth (Replacement Dimension)": "Earth (Replacement Dimension)",
     "Earth (Evil Rick's Target Dimension)": "Earth (Evil Rick's Target Dimension)",
     "Bird World": "Bird World",
@@ -14,7 +17,6 @@
     "Giant's Town": "Giant's Town",
     "Unity's Planet": "Unity's Planet",
     "Anatomy Park": "Anatomy Park",
-    "Roy: A Life Well Lived": "Roy: A Life Well Lived",
     "Resort Planet": "Resort Planet",
     "Hamster in Butt World": "Hamster in Butt World",
     "Earth (Giant Telepathic Spiders Dimension)": "Earth (Giant Telepathic Spiders Dimension)",
@@ -66,7 +68,37 @@
     "Larva Alien's Planet": "Larva Alien's Planet",
     "Mr. Meeseeks Box": "Mr. Meeseeks Box",
     "Earth (C-137)": "Earth (C-137)",
-    "Earth (5-126)": "Earth (5-126)"
+    "Earth (5-126)": "Earth (5-126)",
+    "Earth (K-22)": "Earth (K-22)",
+    "Vindicator's Base": "Vindicator's Base",
+    "Pawn Shop Planet": "Pawn Shop Planet",
+    "Earth (D-99)": "Earth (D-99)",
+    "Earth (D716)": "Earth (D716)",
+    "Earth (D716-B)": "Earth (D716-B)",
+    "Earth (D716-C)": "Earth (D716-C)",
+    "Earth (J-22)": "Earth (J-22)",
+    "Trunk World": "Trunk World",
+    "Blips and Chitz": "Blips and Chitz",
+    "Earth (C-35)": "Earth (C-35)",
+    "Alien Day Spa": "Alien Day Spa",
+    "Gorgon Quadrant": "Gorgon Quadrant",
+    "Monogatron Mothership": "Monogatron Mothership",
+    "Midland Quasar": "Midland Quasar",
+    "Mount Space Everest": "Mount Space Everest",
+    "New Improved Galactic Federation Quarters": "New Improved Galactic Federation Quarters",
+    "Alien Acid Plant": "Alien Acid Plant",
+    "NX-5 Planet Remover": "NX-5 Planet Remover",
+    "Defiance's Ship": "Defiance's Ship",
+    "Defiance's Base": "Defiance's Base",
+    "Space": "Space",
+    "Rick's Consciousness": "Rick's Consciousness",
+    "Rick's Memories": "Rick's Memories",
+    "St. Gloopy Noops Hospital": "St. Gloopy Noops Hospital",
+    "A Life Well Lived": "A Life Well Lived",
+    "Galactic Federation Prison": "Galactic Federation Prison",
+    "Eric Stoltz Mask Earth": "Eric Stoltz Mask Earth",
+    "Interdimensional Customs": "Interdimensional Customs",
+    "Zigerion's Base": "Zigerion's Base"
   },
   "genders": {
     "Gender": "Gender",
@@ -87,8 +119,19 @@
     "Epsodes - Rick & Morty": "Epsodes - Rick & Morty",
     "Episodes": "Episodes",
     "Characters": "Characters",
+    "Locations": "Locations",
     "Search for a character": "Search for a character",
-    "Search": "Search"
+    "Search": "Search",
+    "Episode name": "Episode name",
+    "Location": "Location",
+    "Dimension": "Dimension",
+    "Type": "Type",
+    "Choose an episode": "Choose an episode",
+    "Choose a location": "Choose a location",
+    "Loading...": "Loading...",
+    "Appearances": "Appearances",
+    "Last location": "Last location",
+    "episodes": "episodes"
   },
   "title": {
     "Pilot": "Pilot",
@@ -142,5 +185,82 @@
     "Rickternal Friendshine of the Spotless Mort": "Rickternal Friendshine of the Spotless Mort",
     "Forgetting Sarick Mortshall": "Forgetting Sarick Mortshall",
     "Rickmurai Jack": "Rickmurai Jack"
+  },
+  "pagination": {
+    "Total number of pages and total characters found": "Total number of pages and total characters found",
+    "Page": "Page",
+    "of": "of"
+  },
+  "dimension": {
+    "Dimension C-137": "Dimension C-137",
+    "unknown": "unknown",
+    "Post-Apocalyptic Dimension": "Post-Apocalyptic Dimension",
+    "Replacement Dimension": "Replacement Dimension",
+    "Cronenberg Dimension": "Cronenberg Dimension",
+    "Fantasy Dimension": "Fantasy Dimension",
+    "Dimension 5-126": "Dimension 5-126",
+    "Testicle Monster Dimension": "Testicle Monster Dimension",
+    "Cromulon Dimension": "Cromulon Dimension",
+    "Dimension C-500A": "Dimension C-500A",
+    "Dimension K-83": "Dimension K-83",
+    "Dimension J19ζ7": "Dimension J19ζ7",
+    "Eric Stoltz Mask Dimension": "Eric Stoltz Mask Dimension",
+    "Evil Rick's Target Dimension": "Evil Rick's Target Dimension",
+    "Giant Telepathic Spiders Dimension": "Giant Telepathic Spiders Dimension",
+    "Unknown dimension": "Unknown dimension",
+    "Dimension K-22": "Dimension K-22",
+    "Dimension D716-B": "Dimension D716-B",
+    "Dimension D716": "Dimension D716",
+    "Dimension D-99": "Dimension D-99",
+    "Dimension D716-C": "Dimension D716-C",
+    "Dimension J-22": "Dimension J-22",
+    "Dimension C-35": "Dimension C-35",
+    "Pizza Dimension": "Pizza Dimension",
+    "Phone Dimension": "Phone Dimension",
+    "Chair Dimension": "Chair Dimension",
+    "Fascist Dimension": "Fascist Dimension",
+    "Fascist Shrimp Dimension": "Fascist Shrimp Dimension",
+    "Fascist Teddy Bear Dimension": "Fascist Teddy Bear Dimension",
+    "Wasp Dimension": "Wasp Dimension",
+    "Merged Dimension": "Merged Dimension"
+  },
+  "type": {
+    "Planet": "Planet",
+    "Cluster": "Cluster",
+    "Space station": "Space station",
+    "Microverse": "Microverse",
+    "Fantasy town": "Fantasy town",
+    "Dream": "Dream",
+    "Dimension": "Dimension",
+    "unknown": "unknown",
+    "Menagerie": "Menagerie",
+    "Game": "Game",
+    "Customs": "Customs",
+    "Daycare": "Daycare",
+    "Dwarf planet (Celestial Dwarf)": "Dwarf planet (Celestial Dwarf)",
+    "Box": "Box",
+    "Spacecraft": "Spacecraft",
+    "Artificially generated world": "Artificially generated world",
+    "Machine": "Machine",
+    "Quadrant": "Quadrant",
+    "Mount": "Mount",
+    "Liquid": "Liquid",
+    "Convention": "Convention",
+    "Woods": "Woods",
+    "Non-Diegetic Alternative Reality": "Non-Diegetic Alternative Reality",
+    "Nightmare": "Nightmare",
+    "Diegesis": "Diegesis",
+    "Asteroid": "Asteroid",
+    "Acid Plant": "Acid Plant",
+    "Reality": "Reality",
+    "Death Star": "Death Star",
+    "Elemental Rings": "Elemental Rings",
+    "Human": "Human",
+    "Space": "Space",
+    "Hell": "Hell",
+    "Police Department": "Police Department",
+    "Country": "Country",
+    "Consciousness": "Consciousness",
+    "Memory": "Memory"
   }
 }
