--- a/src/resource/locales/pt/pt.json
+++ b/src/resource/locales/pt/pt.json
@@ -14,7 +14,6 @@
     "Giant's Town": "Cidade do Gigante",
     "Unity's Planet": "Planeta da Unidade",
     "Anatomy Park": "Parque de Anatomia",
-    "Roy: A Life Well Lived": "Roy: uma vida bem vivida",
     "Resort Planet": "Planeta resort",
     "Hamster in Butt World": "Hamster no mundo da bunda",
     "Earth (Giant Telepathic Spiders Dimension)": "Terra (Dimensão das Aranhas Telepáticas Gigantes)",
@@ -52,7 +51,7 @@
     "Hell": "Inferno",
     "Space Tahoe": "Espaço Tahoe",
     "France": "França",
-    "Birdperson's Consciousness": "Consciência do Birdperson",
+    "Birdperson's Consciousness": "Consciência do Homen Passaro",
     "Avian Planet": "Planeta Aviário",
     "Normal Size Bug Dimension": "Dimensão de inseto de tamanho normal",
     "Rick and Two Crows Planet": "Rick e Dois Corvos Planeta",
@@ -66,7 +65,40 @@
     "Larva Alien's Planet": "Planeta do Alienígena Larva",
     "Mr. Meeseeks Box": "Caixa do Sr.Meeseeks",
     "Earth (C-137)": "Terra (C-137)",
-    "Earth (5-126)": "Terra (5-126)"
+    "Earth (5-126)": "Terra (5-126)",
+    "Earth (K-22)": "Terra (K-22)",
+    "Vindicator's Base": "Base do Vindicator",
+    "Pawn Shop Planet": "Planeta da loja de penhores",
+    "Earth (D-99)": "Terra (D-99)",
+    "Earth (D716)": "Terra (D716)",
+    "Earth (D716-B)": "Terra (D716-B)",
+    "Earth (D716-C)": "Terra (D716-C)",
+    "Earth (J-22)": "Terra (J-22)",
+    "Trunk World": "Mundo do Tronco",
+    "Blips and Chitz": "Blips e Chitz",
+    "Earth (C-35)": "Terra (C-35)",
+    "Alien Day Spa": "Spa Alienígena",
+    "Gorgon Quadrant": "Quadrante Gorgon",
+    "Monogatron Mothership": "Nave-Mãe Monogatron",
+    "Midland Quasar": "Quasar Midland",
+    "Mount Space Everest": "Monte Everest Espacial",
+    "New Improved Galactic Federation Quarters": "Novos e Melhorados Quartéis da Federação Galáctica",
+    "Alien Acid Plant": "Planta de Ácido Alienígena",
+    "NX-5 Planet Remover": "NX-5 Removedor de Planetas",
+    "Defiance's Ship": "Nave da Resistência",
+    "Defiance's Base": "Base da Resistência",
+    "Space": "Espaço",
+    "Rick's Consciousness": "Consciência do Rick",
+    "Rick's Memories": "Memórias do Rick",
+    "Worldender's lair": "Covil do Worldender",
+    "Planet Squanch": "Planeta Squanch",
+    "Immortality Field Resort": "Resort de Campo da Imortalidade",
+    "St. Gloopy Noops Hospital": "Hospital St. Gloopy Noops",
+    "A Life Well Lived": "Uma vida bem vivida",
+    "Galactic Federation Prison": "Prisão da Federação Galáctica",
+    "Eric Stoltz Mask Earth": "Terra Máscara Eric Stoltz",
+    "Interdimensional Customs": "Costumes Interdimensionais",
+    "Zigerion's Base": "Base de Zigerion"
   },
   "genders": {
     "Gender": "Gênero",
@@ -87,8 +119,19 @@
     "Epsodes - Rick & Morty": "Epsódios - Rick & Morty",
     "Episodes": "Episódios",
     "Characters": "Personagens",
+    "Locations": "Locais",
     "Search for a character": "Buscar um personagem",
-    "Search": "Buscar"
+    "Search": "Buscar",
+    "Episode name": "Nome do episódio",
+    "Location": "Localização",
+    "Dimension": "Dimensão",
+    "Type": "Tipo",
+    "Choose an episode": "Escolha um episódio",
+    "Choose a location": "Escolha um local",
+    "Loading...": "Carregando...",
+    "Appearances": "Apariçoẽs",
+    "Last location": "Ultima localização",
+    "episodes" : "episódios"
   },
   "title": {
     "Pilot": "Episódio Piloto",
@@ -142,5 +185,82 @@
     "Rickternal Friendshine of the Spotless Mort": "Brilho Rickterno de uma Mente Morty sem Lembranças",
     "Forgetting Sarick Mortshall": "Esquecendo Sarick Mortshall",
     "Rickmurai Jack": "Rickmurai Jack"
+  },
+  "pagination": {
+    "Total number of pages and total characters found": "Número total de páginas e o total de personagens encontrado",
+    "Page": "Página",
+    "of": "de"
+  },
+  "dimension": {
+    "Dimension C-137": "Dimensão C-137",
+    "unknown": "Desconhecida",
+    "Post-Apocalyptic Dimension": "Dimensão Pós-Apocalíptica",
+    "Replacement Dimension": "Dimensão de Substituição",
+    "Cronenberg Dimension": "Dimensão Cronenberg",
+    "Fantasy Dimension": "Dimensão Fantástica",
+    "Dimension 5-126": "Dimensão 5-126",
+    "Testicle Monster Dimension": "Dimensão do Monstro Testículo",
+    "Cromulon Dimension": "Dimensão Cromulon",
+    "Dimension C-500A": "Dimensão C-500A",
+    "Dimension K-83": "Dimensão K-83",
+    "Dimension J19ζ7": "Dimensão J19ζ7",
+    "Eric Stoltz Mask Dimension": "Dimensão da Máscara de Eric Stoltz",
+    "Evil Rick's Target Dimension": "Dimensão Alvo do Rick Maligno",
+    "Giant Telepathic Spiders Dimension": "Dimensão das Aranhas Telepáticas Gigantes",
+    "Unknown dimension": "Dimensão Desconhecida",
+    "Dimension K-22": "Dimensão K-22",
+    "Dimension D716-B": "Dimensão D716-B",
+    "Dimension D716": "Dimensão D716",
+    "Dimension D-99": "Dimensão D-99",
+    "Dimension D716-C": "Dimensão D716-C",
+    "Dimension J-22": "Dimensão J-22",
+    "Dimension C-35": "Dimensão C-35",
+    "Pizza Dimension": "Dimensão Pizza",
+    "Phone Dimension": "Dimensão do Telefone",
+    "Chair Dimension": "Dimensão da Cadeira",
+    "Fascist Dimension": "Dimensão Fascista",
+    "Fascist Shrimp Dimension": "Dimensão do Camarão Fascista",
+    "Fascist Teddy Bear Dimension": "Dimensão do Urso de Pelúcia Fascista",
+    "Wasp Dimension": "Dimensão das Vespas",
+    "Merged Dimension": "Dimensão Fundida"
+  },
+  "type": {
+    "Planet": "Planeta",
+    "Cluster": "Aglomerado",
+    "Space station": "Estação Espacial",
+    "Microverse": "Microverso",
+    "Fantasy town": "Cidade Fantástica",
+    "Dream": "Sonho",
+    "Dimension": "Dimensão",
+    "unknown": "Desconhecido",
+    "Menagerie": "Menagerie",
+    "Game": "Jogo",
+    "Customs": "Alfândega",
+    "Daycare": "Creche",
+    "Dwarf planet (Celestial Dwarf)": "Planeta Anão (Anão Celestial)",
+    "Box": "Caixa",
+    "Spacecraft": "Nave Espacial",
+    "Artificially generated world": "Mundo Gerado Artificialmente",
+    "Machine": "Máquina",
+    "Quadrant": "Quadrante",
+    "Mount": "Monte",
+    "Liquid": "Líquido",
+    "Convention": "Convenção",
+    "Woods": "Floresta",
+    "Non-Diegetic Alternative Reality": "Realidade Alternativa Não-Diegética",
+    "Nightmare": "Pesadelo",
+    "Diegesis": "Diegese",
+    "Asteroid": "Asteroide",
+    "Acid Plant": "Planta de Ácido",
+    "Reality": "Realidade",
+    "Death Star": "Estrela da Morte",
+    "Elemental Rings": "Anéis Elementares",
+    "Human": "Humano",
+    "Space": "Espaço",
+    "Hell": "Inferno",
+    "Police Department": "Departamento de Polícia",
+    "Country": "País",
+    "Consciousness": "Consciência",
+    "Memory": "Memória"
   }
 }
