🐛: Correção do bug de tradução

--- a/src/resource/locales/en/en.json
+++ b/src/resource/locales/en/en.json
@@ -111,7 +111,7 @@
     "All Status": "All Status",
     "Alive": "Alive",
     "Dead": "Dead",
-    "unknown": "unknown"
+    "Unknown": "Unknown"
   },
   "system": { 
     "Characters - Rick & Morty": "Characters - Rick & Morty",
