--- a/src/resource/locales/pt/pt.json
+++ b/src/resource/locales/pt/pt.json
@@ -111,7 +111,7 @@
     "All Status": "Todos os status",
     "Alive": "Vivo",
     "Dead": "Morto",
-    "unknown": "Desconhecido"
+    "Unknown": "Desconhecido"
   },
   "system": { 
     "Characters - Rick & Morty" :"Personagens - Rick & Morty",
